# StoryTeller

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend-serverless/: .env.example  .funcignore  .gitignore  AGENTS.md  README.md  function_app.py  host.json  local.settings.json.example  pyproject.toml  requirements.txt
backend-serverless/alembic/versions/: 0002_auth_identities_onboarding.py  0003_default_light_theme.py  0004_admin_console.py  0005_llm_usage_events.py  0006_english_level.py
backend-serverless/app/: config.py  deps.py  main.py  seed.py
backend-serverless/app/api/v1/: __init__.py
backend-serverless/app/core/: errors.py  middleware.py  security.py  session_cookies.py
backend-serverless/app/db/models/: __init__.py  _helpers.py  achievement.py  admin.py  content.py  course.py  interest.py  llm_usage.py  notification.py  streak.py  task.py  task_answer.py  task_evaluation.py  user.py  (+1 more)
backend-serverless/app/llm/: claude_client.py  client.py
backend-serverless/app/services/: admin_service.py  auth_service.py  avatar_service.py  content_service.py  dashboard_service.py  evaluation_queue.py  evaluation_service.py  level_service.py  llm_usage_service.py  task_prewarm_queue.py  task_prewarm_service.py  task_service.py  user_service.py
backend-serverless/infra/: main.bicep  main.parameters.json.example
backend-serverless/scripts/: __init__.py  smoke_llm_provider.py
backend-serverless/tests/: __conftest_helpers__.py  conftest.py
backend-serverless/tests/integration/: __init__.py  _helpers.py  test_admin.py  test_auth.py  test_catalog.py  test_dashboard.py  test_health.py  test_me.py  test_me_avatar.py  test_tasks.py
backend-serverless/tests/unit/: test_evaluation_queue.py  test_evaluation_service.py  test_function_app.py  test_grading.py  test_llm_client.py  test_llm_smoke_script.py  test_llm_usage_service.py  test_task_prewarm_queue.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: __init__.py  config.py
backend/app/core/: __init__.py  errors.py  grading.py  security.py
backend/app/db/: session.py
backend/app/llm/: __init__.py
backend/app/services/: auth_service.py  content_service.py  dashboard_service.py  task_service.py
backend/tests/: __conftest_helpers__.py  conftest.py
backend/tests/integration/: _helpers.py  test_auth.py  test_catalog.py  test_dashboard.py  test_health.py  test_me.py  test_tasks.py
(+159 files in other folders)
